<resources>
    <string name="app_name">navProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Properties Menu</string>
    <string name="menu_slideshow">Your Reservations</string>
    <string name="menu_account">Account</string>
    <string name="menu_favorites">Your Favorites</string>
    <string name="menu_featuredProperties">Featured Properties</string>
    <string name="menu_contactUs">Contact Us</string>
    <string name="menu_logout">Logout</string>

</resources>