<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_add_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_propertiesMenu"
            android:icon="@drawable/baseline_apartment_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_yourReservations"
            android:icon="@drawable/baseline_assignment_turned_in_24"
            android:title="Your Reservations" />

        <item
            android:id="@+id/nav_yourFavorites"
            android:icon="@drawable/baseline_all_inclusive_24"
            android:title="@string/menu_favorites" />

        <item
            android:id="@+id/nav_featuredProperties"
            android:icon="@drawable/baseline_auto_awesome_24"
            android:title="@string/menu_featuredProperties" />

        <item
            android:id="@+id/nav_my_account"
            android:icon="@drawable/baseline_account_circle_24"
            android:title="@string/menu_account" />


        <item
            android:id="@+id/nav_contactUs"
            android:icon="@drawable/baseline_call_24"
            android:title="@string/menu_contactUs" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_arrow_outward_24"
            android:title="@string/menu_logout" />

    </group>
</menu>