<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.navproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_propertiesMenu"
        android:name="com.example.navproject.ui.PropertiesMenu.PropertiesMenuFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_propertiesmenu" />

    <fragment
        android:id="@+id/nav_yourReservations"
        android:name="com.example.navproject.ui.Reservations.ReservationsFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_reservations" />


    <fragment
        android:id="@+id/nav_yourFavorites"
        android:name="com.example.navproject.ui.Favorites.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/nav_featuredProperties"
        android:name="com.example.navproject.ui.FeaturedProperties.FeaturedPropertiesFragment"
        android:label="@string/menu_featuredProperties"
        tools:layout="@layout/fragment_featured_properties" />

    <fragment
        android:id="@+id/nav_my_account"
        android:name="com.example.navproject.ui.account.accountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_contactUs"
        android:name="com.example.navproject.ui.contact.contactFragment"
        android:label="@string/menu_contactUs"
        tools:layout="@layout/fragment_contact" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.navproject.ui.logout.logoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />




</navigation>